--- a/index.html
+++ b/index.html
@@ -7,11 +7,9 @@
   </head>
   <body>
     <h2>Map Test</h2>
-    
-    <label for="pac-input">Enter your name:</label>
-    <input type="text" id="pac-input" name="pac-input">
 
     <div id="map"></div>
+    <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location">
   
     <script src="https://unpkg.com/@googlemaps/js-api-loader@1.x/dist/index.min.js"></script>
   </body>
