Search Bar + markers added
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <h2>Map Test</h2>
 
     <div id="map"></div>
-    <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location">
+    <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location"></input>
   
     <script src="https://unpkg.com/@googlemaps/js-api-loader@1.x/dist/index.min.js"></script>
   </body>
