--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Temp Map</title>
+    <title>UMBC Map</title>
     <script type="module" src="./index.js"></script>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <h2>Map Test</h2>
+    <h1>UMBC Interactive Map</h1>
 
     <div id="map"></div>
     <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location"></input>
