Decrease size of commons view marker icon

--- a/index.html
+++ b/index.html
@@ -20,17 +20,21 @@
       <a id="weather-txt">Weather Routes</a>
     </div>
 
-  <!-- Button to Add to Favorites -->
-  <button id="favorite-button">Add to Favorites</button>
+    <!-- Search Input for Autocomplete -->
+    <label for="search-input">Search for a place:</label>
+    <input type="text" id="search-input" name="search-input">  
 
-  <!-- List to Display Favorite Searches -->
-  <ul id="favorites-list"></ul>
+    <!-- Button to Add to Favorites -->
+    <button id="favorite-button">Add to Favorites</button>
 
-  <div id="map" style="height: 500px;"></div>
-  <div id="footer">
-      <button id="footer-button" onclick="window.open('https\://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
-      <!-- Terms and Conditions, button for site map -->
-  </div>
+    <!-- List to Display Favorite Searches -->
+    <ul id="favorites-list"></ul>
+
+    <div id="map" style="height: 500px;"></div>
+    <div id="footer">
+        <button id="footer-button" onclick="window.open('https\://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
+        <!-- Terms and Conditions, button for site map -->
+    </div>
 
   <script src="https://unpkg.com/@googlemaps/js-api-loader@1.x/dist/index.min.js"></script>
 </body>
