Updated formatting of main page
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="header">
-      <img src="UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo"></img>
+      <img src="UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo">
       <h1 id="titletxt">Interactive Map</h1>
     </div>
 
