--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     <input type="text" id="search-input" name="search-input">  
 
     <!-- Button to Add to Favorites -->
-    <button id="favorite-button">Add to Favorites</button>
+   <!-- <button id="favorite-button">Add to Favorites</button> -->
 
     <!-- List to Display Favorite Searches -->
-    <ul id="favorites-list"></ul>
+    <!-- <ul id="favorites-list"></ul> -->
 
     <div id="map" style="height: 500px;"></div>
     <div id="footer">
