--- a/index.html
+++ b/index.html
@@ -10,28 +10,27 @@
   </head>
   <body>
     <div id="header">
-      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo">
+      <img src="UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
       <h1 id="titletxt">Interactive Map</h1>
     </div>
 
     <div id="searchbar">
-      <label for="pac-input"></label>
-      <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location">
-      <a id="accessible-txt">Accessible Routes</a>
-      <a id="weather-txt">Weather Routes</a>
+      <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location"></input>
+      <a href="accessible.html" id="nav-txt">Accessible Routes</a>
+      <a href="weather.html" id="nav-txt">Weather Routes</a>
     </div>
 
-    <!-- Search Input for Autocomplete -->
-    <label for="search-input">Search for a place to favorite:</label>
-    <input type="text" id="search-input" name="search-input">
+    <!-- Search Input for Autocomplete 
+    <label for="search-input">Search for a place:</label>
+    <input type="text" id="search-input" name="search-input">  
 
-    <!-- Button to Add to Favorites -->
+    Button to Add to Favorites
     <button id="favorite-button">Add to Favorites</button>
 
-    <!-- List to Display Favorite Searches -->
-    <ul id="favorites-list"></ul>
+    List to Display Favorite Searches
+    <ul id="favorites-list"></ul> -->
 
-    <div id="map" style="height: 500px;"></div>
+    <div id="map" style="height: 100%;"></div>
     <div id="footer">
         <button id="footer-button" onclick="window.open('https\://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
         <!-- Terms and Conditions, button for site map -->
