Some cleaning to ensure pull > push
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/index.html
+++ b/index.html
@@ -10,14 +10,14 @@
   </head>
   <body>
     <div id="header">
-      <img src="UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
+      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo">
       <h1 id="titletxt">Interactive Map</h1>
     </div>
 
     <div id="searchbar">
       <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location"></input>
-      <a href="accessible.html" id="nav-txt">Accessible Routes</a>
-      <a href="weather.html" id="nav-txt">Weather Routes</a>
+      <a href="accessible.html" id="accessible-nav-txt">Accessible Routes</a>
+      <a href="weather.html" id="weather-nav-txt">Weather Routes</a>
     </div>
 
     <!-- Search Input for Autocomplete 
