--- a/weather.html
+++ b/weather.html
@@ -10,13 +10,13 @@
   </head>
   <body>
     <div id="header">
-      <img src="UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
+      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
       <h1 id="titletxt">Weather Routes</h1>
     </div>
 
     <div id="searchbar">
-        <a href="index.html" id="nav-txt">Interactive Map</a>
-        <a href="accessible.html" id="nav-txt">Accessible Routes</a>
+        <a href="index.html" id="index-nav-txt">Interactive Map</a>
+        <a href="accessible.html" id="accessible-nav-txt">Accessible Routes</a>
       </div>
 
     <div id="secondary-container">
