Fixed the bad key calls
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/accessible.html
+++ b/accessible.html
@@ -10,17 +10,17 @@
   </head>
   <body>
     <div id="header">
-      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
+      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo">
       <h1 id="titletxt">Accessible Routes</h1>
     </div>
 
     <div id="searchbar">
-        <a href="index.html "id="index-nav-txt">Interactive Map</a>
+        <a href="index.html" id="index-nav-txt">Interactive Map</a>
         <a href="weather.html" id="accessible-nav-txt">Weather Routes</a>
       </div>
 
     <div id="secondary-container">
-      <embed src="2024-ACCESSIBLE-ROUTES-MAP-2.pdf" id="secondary-img"></embed>
+      <embed src="2024-ACCESSIBLE-ROUTES-MAP-2.pdf" id="secondary-img">
     </div>
 
     <div id="footer">
