--- a/weather.html
+++ b/weather.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="header">
-      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo"></img>
+      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo"/>
       <h1 id="titletxt">Weather Routes</h1>
     </div>
 
@@ -20,7 +20,7 @@
       </div>
 
     <div id="secondary-container">
-      <embed src="UMBC_Campus_Snow_Removal_Priorities-2022-23.pdf" id="secondary-img"></embed>
+      <embed src="UMBC_Campus_Snow_Removal_Priorities-2022-23.pdf" id="secondary-img">
     </div>
 
     <div id="footer">
