Fixed the bad key calls
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/index.html
+++ b/index.html
@@ -12,17 +12,18 @@
     <div id="header">
       <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo">
       <h1 id="titletxt">Interactive Map</h1>
+      <a href="index.html" id="homelink"></a>
     </div>
 
     <div id="searchbar">
-      <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location"></input>
+      <input type="text" id="pac-input" name="pac-input" placeholder="Enter a location">
       <a href="accessible.html" id="accessible-nav-txt">Accessible Routes</a>
       <a href="weather.html" id="weather-nav-txt">Weather Routes</a>
     </div>
 
-    <!-- Search Input for Autocomplete
-    <label for="search-input">Search for a place:</label>
-    <input type="text" id="search-input" name="search-input">  
+    <!-- Search Input for Autocomplete -->
+    <!-- <label for="search-input">Search for a place:</label> -->
+    <!-- <input type="text" id="search-input" name="search-input">  -->
 
 
     <!-- Button to Add to Favorites -->
