--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>UMBC Map</title>
     <script type="module" src="./index.js"></script>
+    <script type="module" src="./destinations.js"></script>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
