--- a/weather.html
+++ b/weather.html
@@ -14,9 +14,9 @@
       <h1 id="titletxt">Weather Routes</h1>
     </div>
 
-    <div id="searchbar">
-        <a href="index.html" id="index-nav-txt">Interactive Map</a>
-        <a href="accessible.html" id="accessible-nav-txt">Accessible Routes</a>
+    <div id="navbar">
+        <a href="index.html" id="nav-txt">Interactive Map</a>
+        <a href="accessible.html" id="nav-txt">Accessible Routes</a>
       </div>
 
     <div id="secondary-container">
