--- a/accessible.html
+++ b/accessible.html
@@ -14,9 +14,9 @@
       <h1 id="titletxt">Accessible Routes</h1>
     </div>
 
-    <div id="searchbar">
-        <a href="index.html" id="index-nav-txt">Interactive Map</a>
-        <a href="weather.html" id="accessible-nav-txt">Weather Routes</a>
+    <div id="navbar">
+        <a href="index.html" id="nav-txt">Interactive Map</a>
+        <a href="weather.html" id="nav-txt">Weather Routes</a>
       </div>
 
     <div id="secondary-container">
