Updated UI to include sidebar

--- a/accessible.html
+++ b/accessible.html
@@ -23,9 +23,10 @@
       <embed src="2024-ACCESSIBLE-ROUTES-MAP-2.pdf" id="secondary-img">
     </div>
 
+    <button id="feedback-button" onclick="window.open('https\://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
+
     <div id="footer">
-        <button id="footer-button" onclick="window.open('https\://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
-        <!-- Terms and Conditions, button for site map -->
+        <p>University of Maryland, Baltimore County &#x2022; 1000 Hilltop Circle, Baltimore, MD 21250<br>Copyright 2025 &copy; All Rights Reserved</p>
     </div>
 
   <script src="https://unpkg.com/@googlemaps/js-api-loader@1.x/dist/index.min.js"></script>
