Added tests for search bars
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </div>
 
     <div id="navbar">
-      <a href="accessible.html" id="nav-txt">Accessible Routes</a>
-      <a href="weather.html" id="nav-txt">Weather Routes</a>
+      <a href="accessible.html" id="accessible-txt">Accessible Routes</a>
+      <a href="weather.html" id="weather-txt">Weather Routes</a>
     </div>
 
     <!-- Search Input for Autocomplete 
@@ -36,10 +36,10 @@
           <input type="text" id="origin-input" name="origin-input" placeholder="Enter your destination"></input>
           <div id="buttons">
             <button id="search-button">View Routes</button>
-            <button id="search-button">Clear</button>
+            <button id="clear-button">Clear</button>
           </div>
         </div>
-        <div id="directions">
+        <div id="directions-region">
           <p style="font-weight: bold">Directions</p>
           <p>These are a bunch of random words I'm using to fill in space. La la la.</p>
         </div>
