Temp gps functionality

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
       <div id="sidebar">
         <div id="directions" style="padding-top: 15px; padding-bottom: 10px; font-weight: bold;">Search for a Destination</div>
         <div id="searchbar">
-          <input type="text" id="pac-input" name="pac-input" placeholder="Enter your starting location"></input>
-          <input type="text" id="origin-input" name="origin-input" placeholder="Enter your destination"></input>
+          <input type="text" id="origin-input" name="origin-input" placeholder="Enter your starting location"></input>
+          <input type="text" id="dest-input" name="dest-input" placeholder="Enter your destination"></input>
           <div id="buttons">
             <button id="search-button">View Routes</button>
-            <button id="search-button">Clear</button>
+            <button id="clear-button">Clear</button>
           </div>
         </div>
         <div id="directions">
