Fixed ID's and associated CSS repetition
Signed-off-by: Saikmat <saikmat@Outlook.com>

--- a/weather.html
+++ b/weather.html
@@ -15,8 +15,8 @@
     </div>
 
     <div id="navbar">
-        <a href="index.html" id="nav-txt">Interactive Map</a>
-        <a href="accessible.html" id="nav-txt">Accessible Routes</a>
+        <a href="index.html" id="index-txt">Interactive Map</a>
+        <a href="accessible.html" id="accessible-txt">Accessible Routes</a>
       </div>
 
     <div id="secondary-container">
