Added minimization feature to navbar, fixed description formatting, updated clear

--- a/accessible.html
+++ b/accessible.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div id="header">
-      <iframe src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo"></iframe>
+      <img src="./assets/UMBC-primary-logo-CMYK-on-black.png" id="logo" alt="UMBC Logo Image">
       <h1 id="titletxt">Accessible Routes</h1>
     </div>
 
