--- a/index.html
+++ b/index.html
@@ -15,8 +15,11 @@
     </div>
 
     <div id="navbar">
-      <a href="accessible.html" id="accessible-txt">Accessible Routes</a>
-      <a href="weather.html" id="weather-txt">Weather Routes</a>
+      <button id="navbutton">&#9776;</button>
+      <div id="navpages">
+        <a href="accessible.html" id="accessible-txt">Accessible Routes</a>
+        <a href="weather.html" id="weather-txt">Weather Routes</a>
+      </div>
     </div>
 
     <!-- Search Input for Autocomplete 
@@ -41,7 +44,7 @@
         </div>
         <div id="directions-region">
           <p style="font-weight: bold">Directions</p>
-          <p>Use caution when following walking directions</p>
+          <p>Use caution when following walking directions.</p>
         </div>
       </div>
 
