--- a/index.html
+++ b/index.html
@@ -26,55 +26,48 @@
     <div id="mainpage">
       <div id="sidebar">
         <div id="directions" style="padding-top: 15px; padding-bottom: 10px; font-weight: bold;">Search for a Destination</div>
-
+        
+        <!-- Search Bar -->
         <div id="searchbar">
-          <!-- Origin input -->
           <label for="origin-input"></label>
           <input type="text" id="origin-input" name="origin-input" placeholder="Enter your starting location">
 
-          <!-- Destination input -->
           <label for="dest-input"></label>
           <input type="text" id="dest-input" name="dest-input" placeholder="Enter your destination">
 
-          <!-- 🔥 New Favorite Button for Destination -->
-          <button id="favorite-button" style="margin-top: 5px;">❤️ Save Destination as Favorite</button>
-
-          <!-- Search/Clear buttons -->
           <div id="buttons">
             <button id="search-button">View Routes</button>
             <button id="clear-button">Clear</button>
           </div>
 
-          <!-- 🔥 New Favorite Destinations List -->
-          <div id="favorites-section" style="margin-top: 10px;">
-            <p style="font-weight: bold;">⭐ Favorite Destinations</p>
-            <ul id="favorites-list" style="list-style-type: none; padding-left: 0;"></ul>
-          </div>
+          <!-- Add to Favorites Button -->
+          <button id="favorite-button" style="margin-top: 10px;">❤️ Favorite Destination</button>
         </div>
 
-        <!-- Directions output -->
+        <!-- Directions Panel -->
         <div id="directions-region">
           <p style="font-weight: bold">Directions</p>
           <p>Use caution when following walking directions.</p>
         </div>
+
+        <!-- Favorite List Display -->
+        <div id="favorites-container" style="margin-top: 20px;">
+          <p style="font-weight: bold">⭐ Your Favorite Destinations:</p>
+          <ul id="favorites-list" style="padding-left: 20px;"></ul>
+        </div>
       </div>
 
-      <!-- Map container -->
+      <!-- Map Container -->
       <div id="map"></div>
     </div>
 
-    <!-- Feedback button -->
+    <!-- Feedback Button -->
     <button id="feedback-button" onclick="window.open('https://forms.gle/EBJ5S11ruVYUaRyTA', '_blank')">Provide Feedback</button>
 
-    <!-- Footer -->
     <div id="footer">
-      <p>
-        University of Maryland, Baltimore County &#x2022; 1000 Hilltop Circle, Baltimore, MD 21250<br>
-        Copyright 2025 &copy; All Rights Reserved
-      </p>
+      <p>University of Maryland, Baltimore County &#x2022; 1000 Hilltop Circle, Baltimore, MD 21250<br>Copyright 2025 &copy; All Rights Reserved</p>
     </div>
 
-    <!-- Google Maps loader -->
     <script src="https://unpkg.com/@googlemaps/js-api-loader@1.x/dist/index.min.js"></script>
   </body>
 </html>
