--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <div id="buttons">
             <button id="search-button">Go Now</button>
             <button id="view-fave-button">Favorites</button>
+            <button id="recent-button">Recents</button>
             <button id="clear-button">Clear</button>
           </div>
         </div>
@@ -53,7 +54,7 @@
           <p style="font-weight: bold; font-size: 1vw;">Recent Searches:</p>
           <div id="recent-bullet">
             <ul id="recent-list" style="padding-left: 2vw;"></ul>
-            <button id="clear-recent-button" style="margin-top: 5px;">Clear Recent</button>
+            <!--<button id="clear-recent-button" style="margin-top: 5px;">Clear Recent</button>-->
           </div>
         </div>
 
